// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerToolbar Should match toolbar snapshot WITH Edit button 1`] = `
<div
  className="toolbar"
  data-test="layertoolbar"
>
  <Tooltip
    content="Edit"
    dataTest="dhis2-uicore-tooltip"
    maxWidth={300}
    placement="top"
    tag="span"
  >
    <div
      className="button"
      data-test="editbutton"
      onClick={[Function]}
    >
      <CreateIcon
        data-icon="CreateIcon"
      />
    </div>
  </Tooltip>
  <span
    className="spacer"
  />
  <Tooltip
    content="Toggle visibility"
    dataTest="dhis2-uicore-tooltip"
    maxWidth={300}
    placement="top"
    tag="span"
  >
    <div
      className="button"
      data-test="visibilitybutton"
      onClick={[Function]}
    >
      <VisibilityIcon
        data-icon="VisibilityIcon"
      />
    </div>
  </Tooltip>
  <div
    className="sliderContainer"
  >
    <Tooltip
      content="Set layer opacity"
      dataTest="dhis2-uicore-tooltip"
      maxWidth={300}
      placement="top"
      tag="span"
    >
      <OpacitySlider
        onChange={[Function]}
        opacity={0}
      />
    </Tooltip>
  </div>
  <LayerToolbarMoreMenu
    onEdit={[Function]}
  />
</div>
`;

exports[`LayerToolbar Should match toolbar snapshot without Edit button 1`] = `
<div
  className="toolbar"
  data-test="layertoolbar"
>
  <Tooltip
    content="Toggle visibility"
    dataTest="dhis2-uicore-tooltip"
    maxWidth={300}
    placement="top"
    tag="span"
  >
    <div
      className="button"
      data-test="visibilitybutton"
      onClick={[Function]}
    >
      <VisibilityIcon
        data-icon="VisibilityIcon"
      />
    </div>
  </Tooltip>
  <div
    className="sliderContainer"
  >
    <Tooltip
      content="Set layer opacity"
      dataTest="dhis2-uicore-tooltip"
      maxWidth={300}
      placement="top"
      tag="span"
    >
      <OpacitySlider
        onChange={[Function]}
        opacity={0}
      />
    </Tooltip>
  </div>
  <LayerToolbarMoreMenu />
</div>
`;
